--- a/monaco-chess.csproj
+++ b/monaco-chess.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>monaco_chess</RootNamespace>
     <UseWPF>true</UseWPF>
+    <StartupObject>monaco_chess.src.Program</StartupObject>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
 </Project>
